--- a/software/web-server/static/css/stylev2.css
+++ b/software/web-server/static/css/stylev2.css
@@ -20,6 +20,9 @@ body {
     margin: 0 0 20px 0;
 }
 #weather {
+
+}
+#weather_container {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
